# SpatialServer

./: .gitignore  README.md  hsm.proto  mapserver.proto  metadata_init.json  requirements.txt  server.py  tcpClient.py  tcpServer.py
django/: .gitignore  manage.py
django/sfm/: processing_manager.py  sfm_processing.py
django/spatialserver/: settings.py  urls.py  views.py  wsgi.py
django/spatialserver/templates/: base.html  index.html  potree_double.html  potree_reg.html  register.html
django/static/: index.css
django/upload/: files.py  models.py  urls.py  util.py  views.py
django/upload/migrations/: 0001_initial.py  0002_auto_20180508_0344.py  0003_imageset_status.py  0004_auto_20180605_1808.py  0005_alignment_type.py  0006_auto_20180607_1914.py  0007_alignment_upload_date.py
django/upload/templates/: align_list.html  base.html  image_set_list.html  select.html  upload.html
hsm/: config.py  hsm_pb2.py
hsm/core/: world_point.py
hsm/db/: file_management.py  mongo_client.py  user_management.py
hsm/http/: api_request.py  http_client.py  rest_api.py  validation.py
hsm/http/endpoints/: data_endpoint.py  users_endpoint.py
hsm/http/schemas/: api.yml
hsm/protos/: hsm_pb2.py
hsm/tcp/client/: client.py
hsm/tcp/server/: metadata.json  server.py
hsm/tcp/server/storage/: README.md
hsm/utils/: exif_utils.py
proto/: hsm_pb2.py  mapserver_pb2.py
registration/: .gitignore  CMakeLists.txt  arts_run.sh  box_run.sh  ground_plane.cpp  interactive_icp.cpp  kirby_run.sh  kohn_run.sh  model_splitter.cpp  nano_run.sh  pairwise_registration.cpp  run.sh  sic_test.cpp  sic_test_crop_box.cpp  sic_test_general.cpp  sic_test_normal.cpp  ssms_run.sh  test.cpp
utils/: exif_utils.py
viewer/: gmaps_viewer.html  gmaps_viewer.js
